discussion/kv_engine/178878/178878_rev19_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Add RangeScan support to KVStoreScanTracker

Add new counters and methods to KVStoreScanTracker so that the
create RangeScan path can check if resources are available for
the scan to be created.

Change-Id: I84f226ea5ad3d4cf77615696aa6f0a144f853279

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-10-11 14:21:43.000000000
Message: 
Uploaded patch set 19.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-11 14:59:10.000000000
Message: 
Patch Set 19: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21053/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.cc:194:71: error: too few arguments to function call, expected 2, have 1 [clang-diagnostic-error]
        bucket.getKVStoreScanTracker().updateMaxRunningScans(initQuota);
                                                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill.h:178:5: note: "updateMaxRunningScans" declared here
    void updateMaxRunningScans(size_t maxDataSize, float rangeScanRatio);
    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21053/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.cc:194:71:
error: too few arguments to function call, expected 2, have 1 [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21053/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50215/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/bucket_quota_change_task.cc(194): error C2660: "KVStoreScanTracker::updateMaxRunningScans": function does not take 1 arguments ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50215/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42143/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/bucket_quota_change_task.cc:194:71:
error: too few arguments to function call, expected 2, have 1
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42143/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23461/ : FAILURE

Compile error at [2022-10-11T14:50:57.171Z] ../kv_engine/engines/ep/src/bucket_quota_change_task.cc:194:71:
error: no matching function for call to ?KVStoreScanTracker::updateMaxRunningScans(const long unsigned int&)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23461/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24302/ : FAILURE

Compile error at [2022-10-11T14:49:13.861Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/bucket_quota_change_task.cc:194:71:
error: too few arguments to function call, expected 2, have 1
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24302/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22478/ : FAILURE

Compile error at [2022-10-11T14:27:32.955Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/engines/ep/src/bucket_quota_change_task.cc:194:71:
error: too few arguments to function call, expected 2, have 1
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22478/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10879/ : FAILURE

Compile error at [2022-10-11T14:25:01.181Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/bucket_quota_change_task.cc:194:71:
error: no matching function for call to ?KVStoreScanTracker::updateMaxRunningScans(const long unsigned int&)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10879/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31480/ : FAILURE

Compile error at [2022-10-11T14:58:11.170Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/bucket_quota_change_task.cc:194:71:
error: too few arguments to function call, expected 2, have 1
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31480/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23065/ : FAILURE

Compile error at [2022-10-11T14:48:32.978Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/bucket_quota_change_task.cc:194:71:
error: no matching function for call to ?KVStoreScanTracker::updateMaxRunningScans(const long unsigned int&)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23065/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10783/ : FAILURE

Compile error at [2022-10-11T14:44:24.717Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/bucket_quota_change_task.cc:194:71:
error: too few arguments to function call, expected 2, have 1
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10783/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20293/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
